# api-gateway-hello-world

./: .env.example  .gitignore  README.md  Taskfile.yml  main.tf  terraform.tf
.github/workflows/: ci.yaml
api-infra/: backend.tf  variables.tf
hello-world/: main.py  pyproject.toml
hello-world/test/: test_main.py
infra/: backend.tf  main.tf
main-infra/: main.tf
